changed to http://localhost:8000/fichier/

--- a/fichier-1.0/usr/share/applications/fichier.desktop
+++ b/fichier-1.0/usr/share/applications/fichier.desktop
@@ -5,7 +5,7 @@ Name=Fichier
 Name[de]=Fichier
 GenericName[de]=Fichier
 Comment[de]=Fichier
-Exec=nw /usr/share/prop/
+Exec=nw /usr/share/prop/fichier/.
 Terminal=false
 X-MultipleArgs=false
 Type=Application
