--- a/fichier-1.0/usr/share/prop/fichier/package.json
+++ b/fichier-1.0/usr/share/prop/fichier/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "file:///usr/share/prop/fichier/FICHIER_START.html",
+  "main": "http://localhost:8000/fichier/FICHIER_START.html",
   "name": "Ficher",
   "description": "",
   "version": "0.1.0",
